3 video models trained

--- a/data_labelling.ipynb
+++ b/data_labelling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "cc1af963-a617-4650-9179-722b955728fe",
    "metadata": {
     "execution": {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "c53b5ac2-d590-4dfe-b575-f0f24dcc2ce9",
    "metadata": {
     "execution": {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "2d5e3a8b-db47-41fc-96c8-f36f7749c2ba",
    "metadata": {
     "execution": {
@@ -162,7 +162,7 @@
        "1105  [SHELDON, LEONARD, SHELDON, SHELDON, SHELDON, ...  BBT    True  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "0efa3c46-e28d-4eb3-8a31-a28299452bf8",
    "metadata": {
     "execution": {
@@ -192,7 +192,7 @@
        "(690, 6)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "6a2c58f9-39e9-4529-82b3-535523e8524e",
    "metadata": {
     "execution": {
@@ -225,7 +225,7 @@
        "       'MEMBER-GIRL', 'MODERATOR', 'MEMBER-BOY'], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "bd2ba2da-0108-4c1f-ac91-3c7cea027266",
    "metadata": {
     "execution": {
@@ -266,7 +266,7 @@
        "Name: speaker, Length: 690, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "f60ee3e2-d144-4011-a289-c49233cf9e66",
    "metadata": {
     "execution": {
@@ -305,7 +305,7 @@
        "(633, 6)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "31162013-903e-4a50-b751-5dd3b08b4d43",
    "metadata": {
     "execution": {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "0d4194ea-16c7-4d18-8410-6170ced11208",
    "metadata": {
     "execution": {
@@ -488,7 +488,7 @@
        "1105  [SHELDON, LEONARD, SHELDON, SHELDON, SHELDON, ...  BBT    True      M  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "067c81bc-2e1f-4e8e-adf6-3ade676cf04c",
    "metadata": {},
    "outputs": [],
@@ -507,6 +507,125 @@
     "# Save the filtered data to a CSV file\n",
     "df_filtered.to_csv('sarcasm_data.csv', index=False) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4f7bfbbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(430, 7) (203, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "M_data = df_filtered[df_filtered['gender'] == 'M']\n",
+    "F_data = df_filtered[df_filtered['gender'] == 'F']\n",
+    "print(M_data.shape, F_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba746d2f",
+   "metadata": {},
+   "source": [
+    "In this project we will build 3 different models:\n",
+    "- mixed model (trained on male + female)\n",
+    "- male model\n",
+    "- female model\n",
+    "\n",
+    "In order for the models to be unbiased, the training datasets have to be balanced, i.e. there should be the same number of sarcastic and non-sarcastic utterances.\n",
+    "\n",
+    "In addition, to not be biased towards one gender, the mixed dataset should also be balanced accoring to gender.\n",
+    "\n",
+    "Let's check if this is the case."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "27a28e65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking label balance within the different datasets:\n",
+      "The original dataset is balanced\n",
+      "Sarcastic utterances: 326\n",
+      "Non sarcastic utterances: 307\n",
+      "Male sarcastic utterances: 224\n",
+      "Male non sarcastic utterances: 206\n",
+      "Female sarcastic utterances: 102\n",
+      "Female non sarcastic utterances: 101\n",
+      "\n",
+      "Checking gender balance of the filtered dataset:\n",
+      "Male utterances: 430\n",
+      "Female utterances: 203\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checking if the datasets are balanced\n",
+    "print('Checking label balance within the different datasets:')\n",
+    "if df_text[df_text['sarcasm'] == True].shape == df_text[df_text['sarcasm'] == False].shape:\n",
+    "    print('The original dataset is balanced')\n",
+    "\n",
+    "if df_filtered[df_filtered['sarcasm'] == True].shape == df_filtered[df_filtered['sarcasm'] == False].shape:\n",
+    "    print('The filtered dataset is balanced')\n",
+    "else:\n",
+    "    print('Sarcastic utterances:', df_filtered[df_filtered['sarcasm'] == True].shape[0])\n",
+    "    print('Non sarcastic utterances:', df_filtered[df_filtered['sarcasm'] == False].shape[0])\n",
+    "\n",
+    "if M_data[M_data['sarcasm'] == True].shape == M_data[M_data['sarcasm'] == False].shape:\n",
+    "    print('The male dataset is balanced')\n",
+    "else:\n",
+    "    print('Male sarcastic utterances:', M_data[M_data['sarcasm'] == True].shape[0])\n",
+    "    print('Male non sarcastic utterances:', M_data[M_data['sarcasm'] == False].shape[0])\n",
+    "\n",
+    "if F_data[F_data['sarcasm'] == True].shape == F_data[F_data['sarcasm'] == False].shape:\n",
+    "    print('The female dataset is balanced')\n",
+    "else:\n",
+    "    print('Female sarcastic utterances:', F_data[F_data['sarcasm'] == True].shape[0])\n",
+    "    print('Female non sarcastic utterances:', F_data[F_data['sarcasm'] == False].shape[0])\n",
+    "\n",
+    "print(\"\")\n",
+    "\n",
+    "# Checking if the dataset is balanced by gender\n",
+    "if df_filtered[df_filtered['gender'] == 'M'].shape == df_filtered[df_filtered['gender'] == 'F'].shape:\n",
+    "    print('The original dataset is balanced by gender')\n",
+    "else:\n",
+    "    print('Checking gender balance of the filtered dataset:')\n",
+    "    print('Male utterances:', df_filtered[df_filtered['gender'] == 'M'].shape[0])\n",
+    "    print('Female utterances:', df_filtered[df_filtered['gender'] == 'F'].shape[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13725a9b",
+   "metadata": {},
+   "source": [
+    "As we can see the mixed dataset is not at all balanced by gender, as there are twice as many male utterances as female utterances. It is also not quite balanced in terms of sarcasm labels.\n",
+    "\n",
+    "The male dataset is also not quite balanced, as there are a few more sarcastic utterances than non-sarcastic utterances.\n",
+    "\n",
+    "The female dataset can be considered balances, as the difference between sarcastic and non-sarcastic utterances is only 1.\n",
+    "\n",
+    "To balance the datasets we will use resampling and data augmentation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51a7628b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
