training on augmented data + cleaned up git

--- a/video-model-training.ipynb
+++ b/video-model-training.ipynb
@@ -47,13 +47,13 @@
    "outputs": [],
    "source": [
     "# Read the JSON files from data labeling\n",
-    "with open('sarcasm_data.json') as file:\n",
+    "with open('data/sarcasm_data.json') as file:\n",
     "    all_data = json.load(file)\n",
     "\n",
-    "with open('F_data.json') as file:\n",
+    "with open('data/F_data.json') as file:\n",
     "    F_data = json.load(file)\n",
     "\n",
-    "with open('M_data.json') as file:\n",
+    "with open('data/M_data.json') as file:\n",
     "    M_data = json.load(file)\n",
     "\n",
     "# Extract the keys from the JSON data\n",
