clean up and comment correction

--- a/audio_model-spectrogram.ipynb
+++ b/audio_model-spectrogram.ipynb
@@ -23,29 +23,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing the necessary libraries\n",
     "from functions_audio_model import *\n",
     "from moviepy.editor import VideoFileClip\n",
-    "\n",
     "import torch\n",
-    "from torch.utils.data import Dataset, DataLoader, random_split\n",
-    "import torchaudio\n",
-    "import os\n",
-    "from transformers import Wav2Vec2Processor, HubertForCTC, AdamW\n",
     "from torch import nn\n",
-    "import json\n",
-    "\n",
-    "import numpy as np\n",
-    "import librosa\n",
-    "\n",
-    "from PIL import Image\n",
-    "from torchvision.transforms import ToTensor\n",
-    "import torch\n",
-    "import timm\n",
-    "from torchvision.transforms import ToTensor, Resize, Compose\n",
-    "import librosa\n",
+    "from torch.utils.data import DataLoader, random_split\n",
+    "from scipy.ndimage import zoom\n",
     "import numpy as np\n",
     "import os\n",
-    "from scipy.ndimage import zoom"
+    "import json\n",
+    "import librosa\n",
+    "import timm"
    ]
   },
   {
@@ -1022,34 +1011,35 @@
     "    def __init__(self, spectrogram_dir, labels):\n",
     "        self.spectrogram_dir = spectrogram_dir\n",
     "        self.file_list = [f for f in os.listdir(spectrogram_dir) if f.endswith('_red.npy')]\n",
-    "        self.labels = labels  # A dictionary mapping file names to labels\n",
+    "        self.labels = labels  #dictionary mapping base file names to labels\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.file_list)\n",
     "\n",
     "    def __getitem__(self, idx):\n",
+    "        #to get the base name of the file (without the color channel)\n",
     "        base_name = self.file_list[idx].replace('_red.npy', '')\n",
     "\n",
-    "        # Load the color channels separately\n",
+    "        #All colour channels separately\n",
     "        red_channel = np.load(os.path.join(self.spectrogram_dir, base_name + '_red.npy'))\n",
     "        green_channel = np.load(os.path.join(self.spectrogram_dir, base_name + '_green.npy'))\n",
     "        blue_channel = np.load(os.path.join(self.spectrogram_dir, base_name + '_blue.npy'))\n",
     "\n",
-    "        # Stack the color channels along the color dimension to create an RGB image\n",
+    "        #Stack the color channels to create RGB image\n",
     "        spectrogram = np.stack((red_channel, green_channel, blue_channel), axis=2)\n",
     "\n",
-    "        # Transpose the array to bring the channel dimension to the front\n",
+    "        #Correct the order for Beit model\n",
     "        spectrogram = np.transpose(spectrogram, (2, 0, 1))\n",
     "\n",
-    "        # Convert the numpy array to a tensor\n",
+    "        #Conversion to tensor\n",
     "        spectrogram = torch.from_numpy(spectrogram)\n",
     "\n",
-    "        # Normalize the tensor\n",
+    "        #Normalisation\n",
     "        mean = spectrogram.mean()\n",
     "        std = spectrogram.std()\n",
     "        spectrogram = (spectrogram - mean) / std\n",
     "\n",
-    "        # Get the label for this file\n",
+    "        #Label\n",
     "        label = self.labels[base_name]\n",
     "\n",
     "        return spectrogram, label"
@@ -1084,7 +1074,8 @@
     "\n",
     "# Initialize the model\n",
     "model = timm.create_model('beit_base_patch16_224', pretrained=True)\n",
-    "#add masking"
+    "\n",
+    "#add masking??????????? -> for the black part so it ignores it for analysis\n"
    ]
   },
   {
@@ -1109,14 +1100,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the size of the training set and the test set\n",
+    "#Splitting the dataset into training and testing data\n",
+    "\n",
     "train_size = int(0.8 * len(dataset))  # 80% of the data for training\n",
     "test_size = len(dataset) - train_size  # 20% of the data for testing\n",
     "\n",
-    "# Split the dataset\n",
     "train_dataset, test_dataset = random_split(dataset, [train_size, test_size])\n",
     "\n",
-    "# Create the DataLoaders\n",
+    "#DataLoaders\n",
     "train_dataloader = DataLoader(train_dataset, batch_size=batchsize)\n",
     "test_dataloader = DataLoader(test_dataset, batch_size=batchsize)"
    ]
@@ -1137,7 +1128,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 11%|█         | 1/9 [01:35<12:47, 95.96s/it]"
+      " 78%|███████▊  | 7/9 [13:55<03:45, 112.73s/it]"
      ]
     }
    ],
@@ -1269,41 +1260,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": []
