added text model evaluation

--- a/video-model-training.ipynb
+++ b/video-model-training.ipynb
@@ -409,7 +409,9 @@
     "- performance of mixed_model on the female dataset\n",
     "- performance of mixed_model on the male dataset\n",
     "- performance of F_model on the male dataset\n",
-    "- performance of M_model on the female dataset"
+    "- performance of F_model on the mixed dataset\n",
+    "- performance of M_model on the female dataset\n",
+    "- performance of M_model on the mixed dataset"
    ]
   },
   {
