fixed hyperparameter tuning + added classification results from gpt

--- a/hyperparameter_tuning_text_context.ipynb
+++ b/hyperparameter_tuning_text_context.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,16 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current directory: /Users/regulafrey/Desktop/Deep_Learning/Deep_Learning_Project/Inclusiveness-in-Sarcasm-Detection\n",
-      "Contents of current directory: ['text-data-preparation.ipynb', 'text-model-training.ipynb', 'requirements.txt', 'functions_text_model.py', 'audio_features.p', 'text-model-training_context.ipynb', 'functions_audio_model.py', 'results.json', 'video-model-training.ipynb', 'results_tinybert.json', 'z-old-text-model.ipynb', '__pycache__', 'README.md', 'Tryouts', '.gitignore', 'z-old-text-model-BERT-training.ipynb', 'audio_model-HuBERT.ipynb', 'hyperparameter_tuning.ipynb', 'results_tinybert_linear_added.json', 'text-model-tinybert-fallback.pth', '.git', 'data', 'hyperparameter_tuning_text_context.ipynb', 'functions_video_model.py']\n",
-      "/Users/regulafrey/Desktop/Deep_Learning/Deep_Learning_Project/Inclusiveness-in-Sarcasm-Detection/data/mixed_data.json\n"
+      "Current directory: c:\\Users\\celin\\OneDrive\\Documents\\EPFL\\MA2\\Deep learning\\Inclusivity-in-Sarcasm-Detection\n",
+      "Contents of current directory: ['.git', '.gitignore', 'audio_model-spectrogram.ipynb', 'data', 'functions_audio_model.py', 'functions_text_model.py', 'functions_video_model.py', 'hubert_base_online_tokenizer.ipynb', 'hyperparameter_tuning.ipynb', 'hyperparameter_tuning_text_context.ipynb', 'models', 'README.md', 'requirements.txt', 'results', 'results.json', 'results_hyperparameter_text_context_mixed.json', 'results_tinybert.json', 'results_tinybert_linear_added.json', 'text-data-preparation.ipynb', 'text-model-evaluation.ipynb', 'text-model-training.ipynb', 'text-model-training_context.ipynb', 'Tryouts', 'video-model-training.ipynb', 'vocab.json', 'z-old-text-model-BERT-training.ipynb', 'z-old-text-model.ipynb', '__pycache__']\n",
+      "c:\\Users\\celin\\OneDrive\\Documents\\EPFL\\MA2\\Deep learning\\Inclusivity-in-Sarcasm-Detection\\data\\mixed_data.json\n"
      ]
     }
    ],
@@ -49,15 +49,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n"
+      "c:\\Users\\celin\\anaconda3\\envs\\DLproj\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -119,29 +119,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train Loss: 0.7033,  ACC: 0.5094, F1-weighted: 0.4456\n"
+      "train Loss: 0.6848,  ACC: 0.5815, F1-weighted: 0.4975\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:05<00:00,  2.98s/it]"
+      "100%|██████████| 2/2 [00:00<00:00,  6.55it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eval Loss: 0.7008,  ACC: 0.4722, F1-weighted: 0.3448\n",
-      "[{'lr': 0.001, 'batch_size': 8, 'num_epochs': 7, 'eval_loss': 0.6381482444703579, 'eval_metrics': {'ACC': 0.59375, 'F1-weighted': 0.5867649711399712}}, {'lr': 0.0001, 'batch_size': 8, 'num_epochs': 7, 'eval_loss': 0.6864803209900856, 'eval_metrics': {'ACC': 0.5279017857142857, 'F1-weighted': 0.4649926462426462}}, {'lr': 1e-05, 'batch_size': 8, 'num_epochs': 7, 'eval_loss': 0.6904398947954178, 'eval_metrics': {'ACC': 0.4966517857142857, 'F1-weighted': 0.4274825868575869}}, {'lr': 0.001, 'batch_size': 16, 'num_epochs': 7, 'eval_loss': 0.6950617507100105, 'eval_metrics': {'ACC': 0.54375, 'F1-weighted': 0.43466430610452356}}, {'lr': 0.0001, 'batch_size': 16, 'num_epochs': 7, 'eval_loss': 0.700546570122242, 'eval_metrics': {'ACC': 0.45, 'F1-weighted': 0.3761401348143339}}, {'lr': 1e-05, 'batch_size': 16, 'num_epochs': 7, 'eval_loss': 0.7107417955994606, 'eval_metrics': {'ACC': 0.44114583333333335, 'F1-weighted': 0.33333803877282137}}, {'lr': 0.001, 'batch_size': 32, 'num_epochs': 7, 'eval_loss': 0.6590756475925446, 'eval_metrics': {'ACC': 0.5670362903225806, 'F1-weighted': 0.39153668013850385}}, {'lr': 0.0001, 'batch_size': 32, 'num_epochs': 7, 'eval_loss': 0.6874293237924576, 'eval_metrics': {'ACC': 0.5504032258064516, 'F1-weighted': 0.5423988027436304}}, {'lr': 1e-05, 'batch_size': 32, 'num_epochs': 7, 'eval_loss': 0.6967290341854095, 'eval_metrics': {'ACC': 0.5272177419354839, 'F1-weighted': 0.4901515151515151}}, {'lr': 0.001, 'batch_size': 64, 'num_epochs': 7, 'eval_loss': 0.7150706350803375, 'eval_metrics': {'ACC': 0.5359623015873016, 'F1-weighted': 0.4421835978475138}}, {'lr': 0.0001, 'batch_size': 64, 'num_epochs': 7, 'eval_loss': 0.684574693441391, 'eval_metrics': {'ACC': 0.5591517857142857, 'F1-weighted': 0.55822912506444}}, {'lr': 1e-05, 'batch_size': 64, 'num_epochs': 7, 'eval_loss': 0.7007834017276764, 'eval_metrics': {'ACC': 0.4722222222222222, 'F1-weighted': 0.34479840614615825}}]\n"
+      "eval Loss: 0.6881,  ACC: 0.5433, F1-weighted: 0.4684\n",
+      "[{'lr': 0.001, 'batch_size': 8, 'num_epochs': 7, 'eval_loss': 0.8265854511409998, 'eval_metrics': {'ACC': 0.6138392857142857, 'F1-weighted': 0.5397935397935398}}, {'lr': 0.0001, 'batch_size': 8, 'num_epochs': 7, 'eval_loss': 0.6539842803031206, 'eval_metrics': {'ACC': 0.7410714285714286, 'F1-weighted': 0.6933032245532246}}, {'lr': 1e-05, 'batch_size': 8, 'num_epochs': 7, 'eval_loss': 0.6643021740019321, 'eval_metrics': {'ACC': 0.6774553571428571, 'F1-weighted': 0.6097031440781442}}, {'lr': 0.001, 'batch_size': 16, 'num_epochs': 7, 'eval_loss': 1.209587313234806, 'eval_metrics': {'ACC': 0.590625, 'F1-weighted': 0.5817139355742297}}, {'lr': 0.0001, 'batch_size': 16, 'num_epochs': 7, 'eval_loss': 0.5911248326301575, 'eval_metrics': {'ACC': 0.678125, 'F1-weighted': 0.6661327438900969}}, {'lr': 1e-05, 'batch_size': 16, 'num_epochs': 7, 'eval_loss': 0.6588964387774467, 'eval_metrics': {'ACC': 0.6864583333333334, 'F1-weighted': 0.6671410278318173}}, {'lr': 0.001, 'batch_size': 32, 'num_epochs': 7, 'eval_loss': 1.2766003906726837, 'eval_metrics': {'ACC': 0.5675403225806451, 'F1-weighted': 0.5230208795692272}}, {'lr': 0.0001, 'batch_size': 32, 'num_epochs': 7, 'eval_loss': 0.5659460499882698, 'eval_metrics': {'ACC': 0.716733870967742, 'F1-weighted': 0.7098741620219734}}, {'lr': 1e-05, 'batch_size': 32, 'num_epochs': 7, 'eval_loss': 0.6873268634080887, 'eval_metrics': {'ACC': 0.5189012096774194, 'F1-weighted': 0.41093910001137784}}, {'lr': 0.001, 'batch_size': 64, 'num_epochs': 7, 'eval_loss': 0.7531097233295441, 'eval_metrics': {'ACC': 0.6535218253968254, 'F1-weighted': 0.652803802972802}}, {'lr': 0.0001, 'batch_size': 64, 'num_epochs': 7, 'eval_loss': 0.5692697465419769, 'eval_metrics': {'ACC': 0.7399553571428572, 'F1-weighted': 0.7367211075768697}}, {'lr': 1e-05, 'batch_size': 64, 'num_epochs': 7, 'eval_loss': 0.688065379858017, 'eval_metrics': {'ACC': 0.5432787698412698, 'F1-weighted': 0.46842967563057225}}]\n"
      ]
     },
     {
@@ -158,13 +158,15 @@
     "# Set device\n",
     "device = torch.device(\"cpu\")\n",
     "\n",
+    "dropout_prob = 0\n",
     "# Define the hyperparameters to tune\n",
     "param_grid = {\n",
     "    'lr': [1e-3, 1e-4, 1e-5],\n",
     "    'num_epochs': [7],\n",
-    "    'batch_size': [8, 16, 32, 64]\n",
+    "    'batch_size': [8, 16, 32, 64],\n",
+    "    'weight_decay': [0.05],\n",
+    "    'dropout_prob': [0]\n",
     "}\n",
-    "\n",
     "\n",
     "# Create a parameter grid\n",
     "grid = ParameterGrid(param_grid)\n",
@@ -172,38 +174,48 @@
     "# Initialize a list to store the results\n",
     "results = []\n",
     "\n",
+    "# Define the size of the training set and the test set\n",
+    "train_size = int(0.8 * len(dataset))  # 80% of the data for training\n",
+    "test_size = len(dataset) - train_size  # 20% of the data for testing\n",
+    "\n",
+    "# Split the dataset\n",
+    "train_dataset, test_dataset = random_split(dataset, [train_size, test_size])\n",
+    "\n",
+    "\n",
     "# For each combination of hyperparameters\n",
     "for params in grid:\n",
+    "\n",
+    "    # Create the DataLoaders\n",
+    "    train_dataloader = DataLoader(train_dataset, batch_size=params['batch_size'], shuffle=True)\n",
+    "    test_dataloader = DataLoader(test_dataset, batch_size=params['batch_size'], shuffle=True)\n",
+    "\n",
     "    # Create a new model\n",
     "    model = BertForSequenceClassification.from_pretrained(\n",
-    "        \"bert-base-uncased\",\n",
+    "        \"prajjwal1/bert-tiny\",\n",
     "        num_labels = 2,\n",
     "        output_attentions = False,\n",
     "        output_hidden_states = False,\n",
     "    )\n",
     "\n",
-    "    for parameter in model.bert.parameters():\n",
-    "        parameter.requires_grad = False\n",
+    "    model.classifier = nn.Sequential(\n",
+    "        nn.Dropout(params['dropout_prob']),\n",
+    "        nn.Linear(in_features=128, out_features=64, bias=True),\n",
+    "        nn.Tanh(),\n",
+    "        nn.Linear(in_features=64, out_features=16, bias=True),\n",
+    "        nn.Tanh(),\n",
+    "        nn.Linear(in_features=16, out_features=2, bias=True)\n",
+    "    )\n",
     "\n",
     "    model.to(device)\n",
     "\n",
     "    # Create a new optimizer with the current learning rate\n",
-    "    optimizer = AdamW(model.classifier.parameters(), lr=params['lr'])\n",
+    "    optimizer = AdamW(model.parameters(), lr=params['lr'], weight_decay=params['weight_decay'])\n",
+    "\n",
     "    # Create the optimizer  \n",
     "    criterion = nn.CrossEntropyLoss()\n",
     "\n",
+    "    # Define metrics\n",
     "    metrics = {'ACC': acc, 'F1-weighted': f1}\n",
-    "    # Define the size of the training set and the test set\n",
-    "    train_size = int(0.8 * len(dataset))  # 80% of the data for training\n",
-    "    test_size = len(dataset) - train_size  # 20% of the data for testing\n",
-    "\n",
-    "    # Split the dataset\n",
-    "    train_dataset, test_dataset = random_split(dataset, [train_size, test_size])\n",
-    "\n",
-    "    # Create the DataLoaders\n",
-    "    train_dataloader = DataLoader(train_dataset, batch_size=params['batch_size'])\n",
-    "    test_dataloader = DataLoader(test_dataset, batch_size=params['batch_size'])\n",
-    "\n",
     "\n",
     "    # Train and evaluate the model for the current number of epochs\n",
     "    for epoch in range(params['num_epochs']):\n",
@@ -223,11 +235,18 @@
     "\n",
     "# Save the results to a JSON file\n",
     "#### Change Filename here when needed!\n",
-    "with open('results_hyperparameter_text_context_mixed.json', 'w') as f:\n",
-    "    json.dump(results, f)\n",
+    "with open('results/results_hyperparameter_text_context_mixed.json', 'w') as f:\n",
+    "    json.dump(results, f, indent=4)\n",
     "\n",
     "print(results)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -246,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
