--- a/dataclean.ipynb
+++ b/dataclean.ipynb
@@ -91,59 +91,722 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1_60',\n",
+       " '1_70',\n",
+       " '1_80',\n",
+       " '1_90',\n",
+       " '1_105',\n",
+       " '1_162',\n",
+       " '1_175',\n",
+       " '1_182',\n",
+       " '1_213',\n",
+       " '1_276',\n",
+       " '1_340',\n",
+       " '1_410',\n",
+       " '1_427',\n",
+       " '1_430',\n",
+       " '1_467',\n",
+       " '1_506',\n",
+       " '1_507',\n",
+       " '1_533',\n",
+       " '1_536',\n",
+       " '1_537',\n",
+       " '1_672',\n",
+       " '1_971',\n",
+       " '1_1001',\n",
+       " '1_1003',\n",
+       " '1_1144',\n",
+       " '1_1180',\n",
+       " '1_1185',\n",
+       " '1_1189',\n",
+       " '1_1262',\n",
+       " '1_1296',\n",
+       " '1_1466',\n",
+       " '1_1470',\n",
+       " '1_1478',\n",
+       " '1_1484',\n",
+       " '1_1549',\n",
+       " '1_1560',\n",
+       " '1_1638',\n",
+       " '1_1666',\n",
+       " '1_1678',\n",
+       " '1_1722',\n",
+       " '1_1772',\n",
+       " '1_1798',\n",
+       " '1_1803',\n",
+       " '1_1931',\n",
+       " '1_1973',\n",
+       " '1_1987',\n",
+       " '1_2075',\n",
+       " '1_2198',\n",
+       " '1_2216',\n",
+       " '1_2354',\n",
+       " '1_2361',\n",
+       " '1_2420',\n",
+       " '1_2423',\n",
+       " '1_2464',\n",
+       " '1_2575',\n",
+       " '1_2580',\n",
+       " '1_2614',\n",
+       " '1_2616',\n",
+       " '1_2664',\n",
+       " '1_2669',\n",
+       " '1_2778',\n",
+       " '1_2792',\n",
+       " '1_2797',\n",
+       " '1_2819',\n",
+       " '1_2830',\n",
+       " '1_2837',\n",
+       " '1_2842',\n",
+       " '1_2853',\n",
+       " '1_3064',\n",
+       " '1_3069',\n",
+       " '1_3125',\n",
+       " '1_3177',\n",
+       " '1_3204',\n",
+       " '1_3287',\n",
+       " '1_3293',\n",
+       " '1_3333',\n",
+       " '1_3348',\n",
+       " '1_3419',\n",
+       " '1_3476',\n",
+       " '1_3545',\n",
+       " '1_3573',\n",
+       " '1_3599',\n",
+       " '1_3649',\n",
+       " '1_3660',\n",
+       " '1_3707',\n",
+       " '1_3766',\n",
+       " '1_3837',\n",
+       " '1_3840',\n",
+       " '1_3842',\n",
+       " '1_4031',\n",
+       " '1_4145',\n",
+       " '1_4281',\n",
+       " '1_4286',\n",
+       " '1_4290',\n",
+       " '1_4352',\n",
+       " '1_4544',\n",
+       " '1_4552',\n",
+       " '1_4576',\n",
+       " '1_4603',\n",
+       " '1_4743',\n",
+       " '1_4760',\n",
+       " '1_4792',\n",
+       " '1_4850',\n",
+       " '1_4949',\n",
+       " '1_4967',\n",
+       " '1_4995',\n",
+       " '1_5058',\n",
+       " '1_5109',\n",
+       " '1_5134',\n",
+       " '1_5156',\n",
+       " '1_5166',\n",
+       " '1_5169',\n",
+       " '1_5211',\n",
+       " '1_5496',\n",
+       " '1_5571',\n",
+       " '1_5572',\n",
+       " '1_5580',\n",
+       " '1_5581',\n",
+       " '1_5617',\n",
+       " '1_5627',\n",
+       " '1_5679',\n",
+       " '1_5699',\n",
+       " '1_5751',\n",
+       " '1_5758',\n",
+       " '1_5786',\n",
+       " '1_5880',\n",
+       " '1_5919',\n",
+       " '1_5953',\n",
+       " '1_5964',\n",
+       " '1_6020',\n",
+       " '1_6032',\n",
+       " '1_6039',\n",
+       " '1_6065',\n",
+       " '1_6092',\n",
+       " '1_6113',\n",
+       " '1_6134',\n",
+       " '1_6165',\n",
+       " '1_6183',\n",
+       " '1_6188',\n",
+       " '1_6211',\n",
+       " '1_6221',\n",
+       " '1_6355',\n",
+       " '1_6370',\n",
+       " '1_6426',\n",
+       " '1_6427',\n",
+       " '1_6428',\n",
+       " '1_6472',\n",
+       " '1_6504',\n",
+       " '1_6534',\n",
+       " '1_6627',\n",
+       " '1_6648',\n",
+       " '1_6683',\n",
+       " '1_6766',\n",
+       " '1_6769',\n",
+       " '1_6835',\n",
+       " '1_6860',\n",
+       " '1_7047',\n",
+       " '1_7082',\n",
+       " '1_7089',\n",
+       " '1_7186',\n",
+       " '1_7281',\n",
+       " '1_7341',\n",
+       " '1_7357',\n",
+       " '1_7395',\n",
+       " '1_7400',\n",
+       " '1_7402',\n",
+       " '1_7442',\n",
+       " '1_7443',\n",
+       " '1_7445',\n",
+       " '1_7449',\n",
+       " '1_7487',\n",
+       " '1_7490',\n",
+       " '1_7575',\n",
+       " '1_7593',\n",
+       " '1_7641',\n",
+       " '1_7661',\n",
+       " '1_7675',\n",
+       " '1_7722',\n",
+       " '1_7894',\n",
+       " '1_7938',\n",
+       " '1_8042',\n",
+       " '1_8045',\n",
+       " '1_8052',\n",
+       " '1_8078',\n",
+       " '1_8159',\n",
+       " '1_8185',\n",
+       " '1_8217',\n",
+       " '1_8407',\n",
+       " '1_8417',\n",
+       " '1_8505',\n",
+       " '1_8717',\n",
+       " '1_8746',\n",
+       " '1_8749',\n",
+       " '1_8827',\n",
+       " '1_8837',\n",
+       " '1_9003',\n",
+       " '1_9009',\n",
+       " '1_9087',\n",
+       " '1_9245',\n",
+       " '1_9594',\n",
+       " '1_9668',\n",
+       " '1_9971',\n",
+       " '1_9972',\n",
+       " '1_9993',\n",
+       " '1_10004',\n",
+       " '1_10009',\n",
+       " '1_10190',\n",
+       " '1_10462',\n",
+       " '1_10495',\n",
+       " '1_10496',\n",
+       " '1_10748',\n",
+       " '1_10797',\n",
+       " '1_10810',\n",
+       " '1_10829',\n",
+       " '1_10849',\n",
+       " '1_10853',\n",
+       " '1_10857',\n",
+       " '1_10859',\n",
+       " '1_10890',\n",
+       " '1_10977',\n",
+       " '1_11006',\n",
+       " '1_11021',\n",
+       " '1_11042',\n",
+       " '1_11046',\n",
+       " '1_11055',\n",
+       " '1_11098',\n",
+       " '1_11120',\n",
+       " '1_11177',\n",
+       " '1_11201',\n",
+       " '1_11224',\n",
+       " '1_11232',\n",
+       " '1_11236',\n",
+       " '1_11242',\n",
+       " '1_11243',\n",
+       " '1_11253',\n",
+       " '1_11257',\n",
+       " '1_11306',\n",
+       " '1_11322',\n",
+       " '1_11378',\n",
+       " '1_11439',\n",
+       " '1_11485',\n",
+       " '1_11526',\n",
+       " '1_11529',\n",
+       " '1_11609',\n",
+       " '1_11697',\n",
+       " '1_11699',\n",
+       " '1_11723',\n",
+       " '1_11773',\n",
+       " '1_11889',\n",
+       " '1_11901',\n",
+       " '1_11913',\n",
+       " '1_11924',\n",
+       " '1_11928',\n",
+       " '1_12002',\n",
+       " '1_12083',\n",
+       " '1_12202',\n",
+       " '1_12320',\n",
+       " '1_12331',\n",
+       " '2_223',\n",
+       " '2_370',\n",
+       " '2_556',\n",
+       " '2_484',\n",
+       " '2_498',\n",
+       " '2_494',\n",
+       " '2_477',\n",
+       " '2_35',\n",
+       " '2_279',\n",
+       " '2_377',\n",
+       " '2_595',\n",
+       " '2_464',\n",
+       " '2_408',\n",
+       " '2_574',\n",
+       " '2_409',\n",
+       " '2_549',\n",
+       " '2_598',\n",
+       " '2_73',\n",
+       " '2_374',\n",
+       " '2_297',\n",
+       " '2_286',\n",
+       " '2_509',\n",
+       " '2_508',\n",
+       " '2_472',\n",
+       " '2_227',\n",
+       " '2_226',\n",
+       " '2_478',\n",
+       " '2_372',\n",
+       " '2_241',\n",
+       " '2_109',\n",
+       " '2_389',\n",
+       " '2_449',\n",
+       " '2_50',\n",
+       " '2_84',\n",
+       " '2_322',\n",
+       " '2_416',\n",
+       " '2_124',\n",
+       " '2_206',\n",
+       " '2_204',\n",
+       " '2_380',\n",
+       " '2_622',\n",
+       " '2_583',\n",
+       " '2_456',\n",
+       " '2_461',\n",
+       " '2_152',\n",
+       " '2_15',\n",
+       " '2_421',\n",
+       " '2_586',\n",
+       " '2_160',\n",
+       " '2_39',\n",
+       " '2_66',\n",
+       " '2_310',\n",
+       " '2_345',\n",
+       " '2_581',\n",
+       " '2_518',\n",
+       " '2_450',\n",
+       " '2_567',\n",
+       " '2_115',\n",
+       " '2_183',\n",
+       " '2_104',\n",
+       " '2_288',\n",
+       " '2_420',\n",
+       " '2_49',\n",
+       " '2_433',\n",
+       " '2_428',\n",
+       " '2_1',\n",
+       " '2_168',\n",
+       " '2_155',\n",
+       " '2_2',\n",
+       " '2_120',\n",
+       " '2_487',\n",
+       " '2_280',\n",
+       " '2_447',\n",
+       " '2_148',\n",
+       " '2_532',\n",
+       " '2_443',\n",
+       " '2_475',\n",
+       " '2_92',\n",
+       " '2_258',\n",
+       " '2_376',\n",
+       " '2_114',\n",
+       " '2_246',\n",
+       " '2_268',\n",
+       " '2_221',\n",
+       " '2_369',\n",
+       " '2_103',\n",
+       " '2_457',\n",
+       " '2_112',\n",
+       " '2_174',\n",
+       " '2_490',\n",
+       " '2_430',\n",
+       " '2_434',\n",
+       " '2_541',\n",
+       " '2_392',\n",
+       " '2_187',\n",
+       " '2_113',\n",
+       " '2_323',\n",
+       " '2_137',\n",
+       " '2_294',\n",
+       " '2_359',\n",
+       " '2_141',\n",
+       " '2_283',\n",
+       " '2_24',\n",
+       " '2_197',\n",
+       " '2_493',\n",
+       " '2_573',\n",
+       " '2_440',\n",
+       " '2_105',\n",
+       " '2_3',\n",
+       " '2_71',\n",
+       " '2_20',\n",
+       " '2_463',\n",
+       " '2_602',\n",
+       " '2_88',\n",
+       " '2_172',\n",
+       " '2_86',\n",
+       " '2_154',\n",
+       " '2_557',\n",
+       " '2_163',\n",
+       " '2_87',\n",
+       " '2_240',\n",
+       " '2_267',\n",
+       " '2_284',\n",
+       " '2_340',\n",
+       " '2_536',\n",
+       " '2_588',\n",
+       " '2_448',\n",
+       " '2_79',\n",
+       " '2_191',\n",
+       " '2_99',\n",
+       " '2_208',\n",
+       " '2_119',\n",
+       " '2_406',\n",
+       " '2_423',\n",
+       " '2_77',\n",
+       " '2_147',\n",
+       " '2_559',\n",
+       " '2_444',\n",
+       " '2_299',\n",
+       " '2_313',\n",
+       " '2_125',\n",
+       " '2_552',\n",
+       " '2_181',\n",
+       " '2_107',\n",
+       " '2_347',\n",
+       " '2_495',\n",
+       " '2_525',\n",
+       " '2_186',\n",
+       " '2_506',\n",
+       " '2_486',\n",
+       " '2_149',\n",
+       " '2_611',\n",
+       " '2_429',\n",
+       " '2_127',\n",
+       " '2_36',\n",
+       " '2_173',\n",
+       " '2_38',\n",
+       " '2_431',\n",
+       " '2_13',\n",
+       " '2_482',\n",
+       " '2_203',\n",
+       " '2_426',\n",
+       " '2_357',\n",
+       " '2_590',\n",
+       " '2_316',\n",
+       " '2_8',\n",
+       " '2_343',\n",
+       " '2_334',\n",
+       " '2_367',\n",
+       " '2_51',\n",
+       " '2_282',\n",
+       " '2_225',\n",
+       " '2_514',\n",
+       " '2_272',\n",
+       " '2_43',\n",
+       " '2_575',\n",
+       " '2_339',\n",
+       " '2_69',\n",
+       " '2_217',\n",
+       " '2_213',\n",
+       " '2_96',\n",
+       " '2_188',\n",
+       " '2_29',\n",
+       " '2_358',\n",
+       " '2_263',\n",
+       " '2_446',\n",
+       " '2_594',\n",
+       " '2_535',\n",
+       " '2_617',\n",
+       " '2_234',\n",
+       " '2_437',\n",
+       " '2_318',\n",
+       " '2_579',\n",
+       " '2_250',\n",
+       " '2_194',\n",
+       " '2_78',\n",
+       " '2_337',\n",
+       " '2_435',\n",
+       " '2_419',\n",
+       " '2_564',\n",
+       " '2_261',\n",
+       " '2_422',\n",
+       " '2_445',\n",
+       " '2_585',\n",
+       " '2_91',\n",
+       " '2_560',\n",
+       " '2_425',\n",
+       " '2_53',\n",
+       " '2_481',\n",
+       " '2_293',\n",
+       " '2_248',\n",
+       " '2_56',\n",
+       " '2_260',\n",
+       " '2_134',\n",
+       " '2_488',\n",
+       " '2_542',\n",
+       " '2_504',\n",
+       " '2_54',\n",
+       " '2_300',\n",
+       " '2_387',\n",
+       " '2_569',\n",
+       " '2_48',\n",
+       " '2_253',\n",
+       " '2_555',\n",
+       " '2_441',\n",
+       " '2_218',\n",
+       " '2_537',\n",
+       " '2_397',\n",
+       " '2_572',\n",
+       " '2_243',\n",
+       " '2_474',\n",
+       " '2_176',\n",
+       " '2_58',\n",
+       " '2_427',\n",
+       " '2_534',\n",
+       " '2_626',\n",
+       " '2_33',\n",
+       " '2_44',\n",
+       " '2_189',\n",
+       " '2_232',\n",
+       " '2_400',\n",
+       " '2_230',\n",
+       " '2_180',\n",
+       " '2_270',\n",
+       " '2_550',\n",
+       " '2_151',\n",
+       " '2_385',\n",
+       " '2_547',\n",
+       " '2_65',\n",
+       " '2_251',\n",
+       " '2_205',\n",
+       " '2_405',\n",
+       " '2_375',\n",
+       " '2_72',\n",
+       " '2_353',\n",
+       " '2_517',\n",
+       " '2_521',\n",
+       " '2_499',\n",
+       " '2_393',\n",
+       " '2_254',\n",
+       " '2_407',\n",
+       " '2_94',\n",
+       " '2_198',\n",
+       " '2_365',\n",
+       " '2_301',\n",
+       " '2_540',\n",
+       " '2_302',\n",
+       " '2_305',\n",
+       " '2_27',\n",
+       " '2_196',\n",
+       " '2_264',\n",
+       " '2_111',\n",
+       " '2_202',\n",
+       " '2_577',\n",
+       " '2_467',\n",
+       " '2_257',\n",
+       " '2_31',\n",
+       " '2_371',\n",
+       " '2_531',\n",
+       " '2_315',\n",
+       " '2_413',\n",
+       " '2_128',\n",
+       " '2_326',\n",
+       " '2_247',\n",
+       " '2_576',\n",
+       " '2_146',\n",
+       " '2_458',\n",
+       " '2_30',\n",
+       " '2_171',\n",
+       " '2_97',\n",
+       " '2_7',\n",
+       " '2_553',\n",
+       " '2_291',\n",
+       " '2_319',\n",
+       " '2_314',\n",
+       " '2_410',\n",
+       " '2_166',\n",
+       " '2_558',\n",
+       " '2_289',\n",
+       " '2_118',\n",
+       " '2_28',\n",
+       " '2_562',\n",
+       " '2_231',\n",
+       " '2_388',\n",
+       " '2_102',\n",
+       " '2_351',\n",
+       " '2_350',\n",
+       " '2_587',\n",
+       " '2_612',\n",
+       " '2_89',\n",
+       " '2_599',\n",
+       " '2_182',\n",
+       " '2_292',\n",
+       " '2_489',\n",
+       " '2_390',\n",
+       " '2_378',\n",
+       " '2_9',\n",
+       " '2_144',\n",
+       " '2_479',\n",
+       " '2_45',\n",
+       " '2_507',\n",
+       " '2_398',\n",
+       " '2_281',\n",
+       " '2_591',\n",
+       " '2_462',\n",
+       " '2_505',\n",
+       " '2_74',\n",
+       " '2_126',\n",
+       " '2_158',\n",
+       " '2_255',\n",
+       " '2_502',\n",
+       " '2_11',\n",
+       " '2_135',\n",
+       " '2_442',\n",
+       " '2_342',\n",
+       " '2_492',\n",
+       " '2_512',\n",
+       " '2_121',\n",
+       " '2_129',\n",
+       " '2_222',\n",
+       " '2_604',\n",
+       " '2_352',\n",
+       " '2_344',\n",
+       " '2_465',\n",
+       " '2_471',\n",
+       " '2_361',\n",
+       " '2_209',\n",
+       " '2_312',\n",
+       " '2_485',\n",
+       " '2_527',\n",
+       " '2_596',\n",
+       " '2_511',\n",
+       " '2_287',\n",
+       " '2_161',\n",
+       " '2_589',\n",
+       " '2_523',\n",
+       " '2_491',\n",
+       " '2_170',\n",
+       " '2_500',\n",
+       " '2_303',\n",
+       " '2_570',\n",
+       " '2_178',\n",
+       " '2_438',\n",
+       " '2_167',\n",
+       " '2_373',\n",
+       " '2_623',\n",
+       " '2_131',\n",
+       " '2_236',\n",
+       " '2_546',\n",
+       " '2_242',\n",
+       " '2_169',\n",
+       " '2_235',\n",
+       " '2_34',\n",
+       " '2_608',\n",
+       " '2_524']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#NOT TO BE RE-RUN\n",
-    "#Creation of spectrograms from the waveform data extracted above\n",
+    "import os\n",
+    "import librosa\n",
+    "from scipy.ndimage import zoom\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "\n",
-    "\n",
-    "#Directory containing audio files\n",
+    "# Directory containing audio files\n",
     "audio_dir = 'audio_files/'\n",
     "\n",
-    "#Directory to save spectrograms\n",
+    "# Directory to save spectrograms\n",
     "spectrogram_dir = 'spectrograms/'\n",
     "\n",
-    "#Length of the maximum waveform found in the dataset\n",
+    "# Length of the maximum waveform found in the dataset\n",
     "# 1_213.wav\n",
     "max_length = 882882\n",
     "\n",
+    "# List of valid IDs\n",
+    "valid_ids = ids\n",
     "\n",
     "for file_name in os.listdir(audio_dir):\n",
     "    if file_name.endswith('.wav'):\n",
+    "        # Extract the ID from the file name\n",
+    "        id = file_name.replace('.wav', '')\n",
+    "\n",
+    "        # If the ID is not in the list of valid IDs, skip this file\n",
+    "        if id not in valid_ids:\n",
+    "            continue\n",
+    "\n",
     "        file_path = os.path.join(audio_dir, file_name)\n",
     "        y, sr = librosa.load(file_path)\n",
     "\n",
-    "        #Padding the waveform to the maximum length found\n",
+    "        # Padding the waveform to the maximum length found\n",
     "        if len(y) < max_length:\n",
     "            y_padded = np.pad(y, (0, max_length - len(y)), 'constant')\n",
     "        else:\n",
     "            y_padded = y[:max_length]\n",
     "\n",
-    "        #Compute the short-time Fourier transform\n",
+    "        # Compute the short-time Fourier transform\n",
     "        D = librosa.stft(y_padded)\n",
     "\n",
-    "        #Convert the amplitude to decibels (logarithmic scale)\n",
+    "        # Convert the amplitude to decibels (logarithmic scale)\n",
     "        D_log = librosa.amplitude_to_db(abs(D))\n",
     "\n",
-    "        #Resize the spectrogram to 224x224 -> wanted dimensions for the Beit model\n",
+    "        # Resize the spectrogram to 224x224 -> wanted dimensions for the Beit model\n",
     "        resize_factor_x = 224 / D_log.shape[1]\n",
     "        resize_factor_y = 224 / D_log.shape[0]\n",
     "        D_log_resized = zoom(D_log, (resize_factor_y, resize_factor_x))\n",
     "\n",
-    "        #Conversion to colour image\n",
+    "        # Conversion to colour image\n",
     "        D_log_resized_color = plt.get_cmap('viridis')(D_log_resized / np.amax(D_log_resized))\n",
     "\n",
-    "        #Remove the alpha channel of the RGBA image\n",
+    "        # Remove the alpha channel of the RGBA image\n",
     "        D_log_resized_color = D_log_resized_color[:, :, :3]\n",
     "\n",
-    "        #All colour channels saved in the same variable\n",
+    "        # All colour channels saved in the same variable\n",
     "        red_channel = D_log_resized_color[:, :, 0]\n",
     "        green_channel = D_log_resized_color[:, :, 1]\n",
     "        blue_channel = D_log_resized_color[:, :, 2]\n",
     "\n",
-    "        #Save the spectrograms separately for each colour channel\n",
+    "        # Save the spectrograms separately for each colour channel\n",
     "        red_spectrogram_path = os.path.join(spectrogram_dir, file_name.replace('.wav', '_red.npy'))\n",
     "        green_spectrogram_path = os.path.join(spectrogram_dir, file_name.replace('.wav', '_green.npy'))\n",
     "        blue_spectrogram_path = os.path.join(spectrogram_dir, file_name.replace('.wav', '_blue.npy'))\n",
@@ -152,6 +815,33 @@
     "        np.save(green_spectrogram_path, green_channel)\n",
     "        np.save(blue_spectrogram_path, blue_channel)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1899"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(os.listdir('spectrograms/'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
