tiny model spectrogram working fully

--- a/audio_tinymodel-spectrogram.ipynb
+++ b/audio_tinymodel-spectrogram.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-05-19 18:23:59.961665: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-05-20 20:23:05.037805: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -88,9 +88,9 @@
     "#Hyperparameters\n",
     "learning_rate = 0.0001\n",
     "#0.001\n",
-    "N_EPOCHS = 10\n",
+    "N_EPOCHS = 20\n",
     "#5\n",
-    "batchsize = 64\n",
+    "batchsize = 32\n",
     "#8"
    ]
   },
@@ -101,7 +101,7 @@
    "outputs": [],
    "source": [
     "#Load labels for sarcasm detection (from a different file, not part of the spectrograms folder)\n",
-    "with open('data/mixed_data.json') as f:\n",
+    "with open('data/sarcasm_data.json') as f:\n",
     "    text_data = json.load(f)\n",
     "    sarcasm_labels = {k: int(v['sarcasm']) for k, v in text_data.items()}"
    ]
@@ -109,6 +109,26 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "690"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(sarcasm_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,89 +153,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Start of epoch 0\n",
-      "Training loss (for one batch) at step 0: 0.7246\n",
-      "Seen so far: 64 samples\n",
-      "Training acc over epoch: 0.5593\n",
-      "Validation acc: 0.7165\n",
-      "\n",
-      "Start of epoch 1\n",
-      "Training loss (for one batch) at step 0: 0.5972\n",
-      "Seen so far: 64 samples\n",
-      "Training acc over epoch: 0.6156\n",
-      "Validation acc: 0.7087\n",
-      "\n",
-      "Start of epoch 2\n",
-      "Training loss (for one batch) at step 0: 0.5609\n",
-      "Seen so far: 64 samples\n",
-      "Training acc over epoch: 0.6337\n",
-      "Validation acc: 0.7087\n",
-      "\n",
-      "Start of epoch 3\n",
-      "Training loss (for one batch) at step 0: 0.5289\n",
-      "Seen so far: 64 samples\n",
-      "Training acc over epoch: 0.6517\n",
-      "Validation acc: 0.7087\n",
-      "\n",
-      "Start of epoch 4\n",
-      "Training loss (for one batch) at step 0: 0.5185\n",
-      "Seen so far: 64 samples\n",
-      "Training acc over epoch: 0.6656\n",
-      "Validation acc: 0.7102\n",
-      "\n",
-      "Start of epoch 5\n",
-      "Training loss (for one batch) at step 0: 0.5037\n",
-      "Seen so far: 64 samples\n",
-      "Training acc over epoch: 0.6769\n",
-      "Validation acc: 0.7113\n",
-      "\n",
-      "Start of epoch 6\n",
-      "Training loss (for one batch) at step 0: 0.4914\n",
-      "Seen so far: 64 samples\n",
-      "Training acc over epoch: 0.6858\n",
-      "Validation acc: 0.7109\n",
-      "\n",
-      "Start of epoch 7\n",
-      "Training loss (for one batch) at step 0: 0.4850\n",
-      "Seen so far: 64 samples\n",
-      "Training acc over epoch: 0.6927\n",
-      "Validation acc: 0.7096\n",
-      "\n",
-      "Start of epoch 8\n",
-      "Training loss (for one batch) at step 0: 0.4767\n",
-      "Seen so far: 64 samples\n",
-      "Training acc over epoch: 0.6992\n",
-      "Validation acc: 0.7078\n",
-      "\n",
-      "Start of epoch 9\n",
-      "Training loss (for one batch) at step 0: 0.4683\n",
-      "Seen so far: 64 samples\n",
-      "Training acc over epoch: 0.7045\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation acc: 0.7063\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set seed for reproducibility\n",
     "tf.random.set_seed(42)\n",
@@ -243,47 +183,11 @@
     "train_acc_metric = SparseCategoricalAccuracy()\n",
     "val_acc_metric = SparseCategoricalAccuracy()\n",
     "\n",
-    "# Define the training function\n",
-    "def train_cycle(model, optimizer, loss_fn, train_acc_metric, val_acc_metric, train_dataloader, val_dataloader, epochs):\n",
-    "    for epoch in range(epochs):\n",
-    "        print(\"\\nStart of epoch %d\" % (epoch,))\n",
-    "\n",
-    "        # Iterate over the batches of the dataset.\n",
-    "        for step, (x_batch_train, y_batch_train) in enumerate(train_dataloader):\n",
-    "            with tf.GradientTape() as tape:\n",
-    "                logits = model(x_batch_train, training=True)\n",
-    "                loss_value = loss_fn(y_batch_train, logits)\n",
-    "            grads = tape.gradient(loss_value, model.trainable_weights)\n",
-    "            optimizer.apply_gradients(zip(grads, model.trainable_weights))\n",
-    "\n",
-    "            # Update training metric.\n",
-    "            train_acc_metric.update_state(y_batch_train, logits)\n",
-    "\n",
-    "            # Log every 200 batches.\n",
-    "            if step % 200 == 0:\n",
-    "                print(\n",
-    "                    \"Training loss (for one batch) at step %d: %.4f\"\n",
-    "                    % (step, float(loss_value))\n",
-    "                )\n",
-    "                print(\"Seen so far: %s samples\" % ((step + 1) * 64))\n",
-    "\n",
-    "        # Display metrics at the end of each epoch.\n",
-    "        train_acc = train_acc_metric.result()\n",
-    "        print(\"Training acc over epoch: %.4f\" % (float(train_acc),))\n",
-    "\n",
-    "        # Run a validation loop at the end of each epoch.\n",
-    "        for x_batch_val, y_batch_val in val_dataloader:\n",
-    "            val_logits = model(x_batch_val, training=False)\n",
-    "            # Update val metrics\n",
-    "            val_acc_metric.update_state(y_batch_val, val_logits)\n",
-    "        val_acc = val_acc_metric.result()\n",
-    "        print(\"Validation acc: %.4f\" % (float(val_acc),))\n",
-    "\n",
-    "# Train the mode\n",
-    "train_cycle(model, optimizer, loss_fn, train_acc_metric, val_acc_metric, train_dataloader, test_dataloader, epochs=N_EPOCHS)\n",
+    "train_accs, val_accs, train_losses, val_losses, train_f1s, val_f1s = train_cycle(model, optimizer, loss_fn, train_acc_metric, val_acc_metric, train_dataloader, test_dataloader, epochs=N_EPOCHS)\n",
+    "plot_metrics(train_accs, val_accs, train_losses, val_losses, train_f1s, val_f1s)\n",
     "\n",
     "# Save the model weights\n",
-    "model.save('models_weights/beit_model_spectrograms.h5')"
+    "model.save('models_weights/tiny_bert_spectrograms.h5')"
    ]
   },
   {
